# refactor-trainer

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  diagnostics.py  main.py
backend/app/analysis/: __init__.py  candidate_detector.py  parser_prototype.py
backend/app/api/: routes.py
backend/app/config/: settings.py
backend/app/guidance/: __init__.py  base.py  catalog.py  local.py
backend/app/providers/: __init__.py  anthropic.py  base.py  contracts.py  json_schema.py  mcp.py  mock.py  ollama.py  openai_provider.py  prompts.py  registry.py
backend/app/schemas/: api.py
backend/app/services/: candidate_service.py  exercise_service.py  github_service.py  provider_service.py
backend/app/storage/: memory.py  provider_config.py
backend/refactor_trainer_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py
backend/tests/fixtures/: sample_python.py
backend/tests/integration/: test_health.py  test_ollama_provider_smoke.py  test_routes_smoke.py
backend/tests/unit/: test_anthropic_provider.py  test_candidate_detector.py  test_diagnostics.py  test_exercise_service.py  test_github_service.py  test_guidance_contract.py  test_mcp_provider.py  test_mcp_provider_parity.py  test_mock_provider_service.py  test_ollama_provider.py  test_openai_provider.py  test_parser_prototype.py  test_provider_config_schema.py  test_provider_config_storage.py  test_provider_contract.py  test_provider_error_paths.py  test_provider_health_model.py  (+2 more)
docs/: api-spec.md  (+7 more)
(+60 files in other folders)
